# ad-seller-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  basic_usage.py  dsp_amazon_server.py  dsp_server.py  mcp_client_usage.py  non_agentic_dsp.py  publisher_gam_server.py  rivian_seller_demo.py  seller_mcp_server.py
src/ad_seller/: __init__.py
src/ad_seller/agents/: __init__.py
src/ad_seller/agents/level1/: __init__.py  inventory_manager.py
src/ad_seller/agents/level2/: __init__.py  ctv_inventory_agent.py  display_inventory_agent.py  mobile_app_inventory_agent.py  native_inventory_agent.py  video_inventory_agent.py
src/ad_seller/agents/level3/: __init__.py  audience_validator_agent.py  availability_agent.py  pricing_agent.py  proposal_review_agent.py  upsell_agent.py
src/ad_seller/clients/: __init__.py  a2a_client.py  gam_rest_client.py  gam_soap_client.py  opendirect21_client.py  opendirect30_client.py  ucp_client.py  unified_client.py
src/ad_seller/config/: __init__.py  settings.py
src/ad_seller/crews/: __init__.py  inventory_crews.py  publisher_crew.py
src/ad_seller/engines/: __init__.py  pricing_rules_engine.py  yield_optimizer.py
src/ad_seller/flows/: __init__.py  deal_generation_flow.py  discovery_inquiry_flow.py  execution_activation_flow.py  non_agentic_dsp_flow.py  product_setup_flow.py  proposal_handling_flow.py
src/ad_seller/interfaces/: __init__.py
src/ad_seller/models/: __init__.py  buyer_identity.py  core.py  flow_state.py  gam.py  opendirect3.py  pricing_tiers.py  ucp.py
src/ad_seller/storage/: __init__.py  base.py  factory.py  redis_backend.py  sqlite_backend.py
src/ad_seller/tools/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_clients.py  test_engines.py  test_gam_clients.py  test_gam_models.py  test_models.py  test_storage.py
(+30 files in other folders)
